<resources>
    <string name="app_name">BioScope</string>
    <string name="title_activity_main_user">MainUserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada quam a turpis ultrices, vitae lacinia ipsum venenatis. Aliquam rutrum vestibulum mi. Curabitur in bibendum libero. Duis fermentum, mauris a tempor interdum, massa tortor fringilla justo, ac cursus leo ligula ut quam. Morbi et consequat nulla. Suspendisse potenti. Morbi risus arcu, placerat sit amet turpis quis, imperdiet euismod risus. Donec tempor sed nunc et tincidunt. Donec elementum, odio id placerat imperdiet, quam nulla rutrum risus, sed lobortis orci orci vitae nunc.guch</string>
    <string name="deepak_das_desc">You can never win in a verbal battle against me nor can you solve advanced mathematical problems involved in machine learning like I can. I designed the entire recommendation system in this app in "1 DAY". Go figure. </string>
    <string name="abhigyan_raha_desc">Well, I am Ironman. I can take care of all your IT needs single handed. That is exactly how smart I am. I designed the entire mobile app and the backend of this project. Like I said, I am Ironman.</string>
    <string name="priyambad_desc">They call me the big guy. And big guy here takes care of everything. Call me when sh*t hits the fan and I can make it all go away. I designed the website and took care of deploying everything there is to be deployed.</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="cast">Cast</string>
    <string name="recommended">Recommended</string>
    <string name="about">About</string>


    <string name="password_size_prompt">Password must be 8 characters</string>
    <string name="email_exists_message">This email already exists!</string>
    <string name="fields_empty_prompt">Cannot leave fields empty!</string>

    <string name="deepak_github_link">https://github.com/dD2405</string>
    <string name="deepak_linkedin_link">https://www.linkedin.com/in/deepak-das-profile/</string>

    <string name="abhigyan_github_link">https://github.com/asnaeb1-dev</string>
    <string name="abhigyan_linkedin_link">https://www.linkedin.com/in/abhigyan-raha/</string>

    <string name="priyamvad_linked_link">https://www.linkedin.com/in/priyamvad-singh-680546147/</string>
    <string name="priyamvad_github_link">https://github.com/priyamvadthegame</string>

    <string name="gif">https://media.giphy.com/media/Yr0WpfGegdgcdqZXcL/giphy.gif</string>
    <string name="gif2">https://media.giphy.com/media/wkSyGueYTnk40/giphy.gif</string>
    <string name="verification_text">Please check your email account for an OTP. This is for verification.</string>
    <string name="verify">Verify</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
