<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/aboutBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:rotation="180"
            android:src="@drawable/ic_arrow"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/about"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.227"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:background="@drawable/background_ll"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:fontFamily="@font/raleway_medium"
            android:text="Developers"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_margin="20dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:src="@drawable/deepakdaspropic"
                            android:layout_gravity="center"
                            android:layout_width="100dp"
                            android:layout_marginTop="30dp"
                            android:layout_height="100dp"/>

                        <TextView
                            android:fontFamily="@font/raleway_medium"
                            android:background="?android:attr/actionBarItemBackground"

                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_margin="20dp"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:text="Deepak Das"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:fontFamily="@font/raleway_medium"

                            android:textSize="18sp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_width="match_parent"
                            android:text="@string/deepak_das_desc"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="100dp">

                            <ImageView
                                android:id="@+id/ddLinkedIn"
                                android:padding="25dp"
                                android:background="?android:attr/actionBarItemBackground"

                                android:src="@drawable/ic_linked_in_icon"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                            <ImageView
                                android:id="@+id/ddGithub"
                                android:padding="25dp"
                                android:background="?android:attr/actionBarItemBackground"

                                android:src="@drawable/github"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>
                            <ImageView
                                android:id="@+id/ddGmail"
                                android:padding="25dp"
                                android:background="?android:attr/actionBarItemBackground"

                                android:src="@drawable/ic_gmail_icon"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                        </LinearLayout>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_margin="20dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:src="@drawable/abhigyan_raha"
                            android:layout_gravity="center"
                            android:layout_width="100dp"
                            android:layout_marginTop="30dp"
                            android:layout_height="100dp"/>

                        <TextView
                            android:fontFamily="@font/raleway_medium"

                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_margin="20dp"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:text="Abhigyan Raha"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:fontFamily="@font/raleway_medium"

                            android:textSize="18sp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_width="match_parent"
                            android:text="@string/abhigyan_raha_desc"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="100dp">

                            <ImageView
                                android:id="@+id/arLinkedIn"
                                android:padding="25dp"
                                android:src="@drawable/ic_linked_in_icon"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                            <ImageView
                                android:id="@+id/arGithub"
                                android:padding="25dp"
                                android:src="@drawable/github"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>
                            <ImageView
                                android:id="@+id/arGmail"
                                android:padding="25dp"
                                android:src="@drawable/ic_gmail_icon"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_margin="20dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:src="@drawable/priyambad_propic1"
                            android:layout_gravity="center"
                            android:layout_width="100dp"
                            android:layout_marginTop="30dp"
                            android:layout_height="100dp"/>

                        <TextView
                            android:fontFamily="@font/raleway_medium"

                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:layout_margin="20dp"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:text="Priyamvad Singh"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:fontFamily="@font/raleway_medium"
                            android:textSize="18sp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:layout_width="match_parent"
                            android:text="@string/priyambad_desc"
                            android:layout_height="wrap_content"/>

                        <LinearLayout
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="100dp">

                            <ImageView
                                android:id="@+id/pmLinkedIn"
                                android:padding="25dp"
                                android:src="@drawable/ic_linked_in_icon"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                            <ImageView
                                android:id="@+id/pmGithub"
                                android:padding="25dp"
                                android:src="@drawable/github"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>
                            <ImageView
                                android:id="@+id/pmGmail"
                                android:padding="25dp"
                                android:src="@drawable/ic_gmail_icon"
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>